# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\WalletController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/orders', [OrderController::class, 'store'])->name('orders.store');
+Route::get('/orders/{order}', [OrderController::class, 'show'])->name('orders.show');
 Route::post('/orders/{order}/pay', [OrderController::class, 'pay'])->name('orders.pay');
 Route::post('/orders/callback', [OrderController::class, 'callback'])->name('orders.callback');
 
@@ -14,5 +15,6 @@ Route::get('/financial-reports', [FinancialReportController::class, 'index'])->n
 Route::get('/financial-reports/chart', [FinancialReportController::class, 'chart'])->name('financial-reports.chart');
 
 Route::get('/transactions', [TransactionController::class, 'index'])->name('transactions.index');
+Route::get('/transactions/{transaction}', [TransactionController::class, 'show'])->name('transactions.show');
 
 Route::post('/wallets/withdraw', [WalletController::class, 'withdraw'])->name('wallets.withdraw');
